# Mneme

./: .gitignore
mneme/: README.md  config.yaml.example  main.py  pyproject.toml
mneme/doc/: README.md  ci-cd.md  observability.md  python-fastapi-style-guide.md  run-local.md
mneme/doc/fronted/: fronted.md
mneme/doc/plans/: frontend-vue3.md  harness-foundation.md
mneme/scripts/: backfill.sh  build_frontend.sh  start_dev.sh  start_frontend_dev.sh
mneme/src/: __init__.py  app.py  backfill.py  collector.py  database.py  logging_config.py  network.py  notifier.py  settings.py  source_registry.py  summarizer.py  util.py
mneme/src/adapters/: __init__.py  adapters.py  anthropic_news.py  google_devops_sre.py  meta.py  meta_engineering.py  openai_news.py  web.py
mneme/src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
mneme/src/frontend/src/: App.vue  style.css
mneme/src/frontend/src/components/: ActionButtons.vue  ArticleCard.vue  ArticleList.vue  SchedulerForm.vue  StatusCard.vue  StatusGrid.vue
mneme/src/frontend/src/composables/: useApi.ts
mneme/src/frontend/src/types/: api.ts
mneme/src/models/: __init__.py  api.py  article.py
mneme/src/storage/: __init__.py  file_storage.py  title_extractor.py
mneme/src/test/: test_app.py  test_base_adapter.py  test_database.py  test_file_storage.py  test_notifier.py  test_settings.py  test_summarizer.py  test_title_extractor.py  test_web.py
