[project]
name = "mneme"
version = "0.1.0"
description = "Information summarization subscription bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx",
    "feedparser",
    "fastapi[standard]>=0.128.0",
    "requests>=2.32.5",
    "crawl4ai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
